Добавили много логики redux

--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -54,6 +54,7 @@
     padding-top:4px;
 }
 
-.root li a:hover {
-
+.selec {
+    color:#ffffff;
+    background-color: rgba($color: #fe5f1e, $alpha: 0.2);
 }
